Fix play navigation overlapping

--- a/src/components/PlayDetailsHeader.module.scss
+++ b/src/components/PlayDetailsHeader.module.scss
@@ -169,7 +169,7 @@
   & > span {
     padding: var(--bootstrap-padding) 0 0;
     width: 100%;
-    min-height: 4em;
+    min-height: 4.5em;
     display: flex;
     overflow-x: auto;
     overflow-y: hidden;
@@ -198,7 +198,7 @@
       width: 100%;
       padding-bottom: 0;
       :global(.sticky-outer-wrapper):global(.active) &::after {
-        height: 4em;
+        height: 4.5em;
       }
     }
   }
